Fix code style warnings in OrderManagerTest